# liver_tumor_segmentation

./: .gitignore  Dockerfile  README.md  pyproject.toml
lightning_logs/version_1/: hparams.yaml
notebooks/: check_after_processing.ipynb  eda.ipynb  eda2.ipynb  torch_transformations.ipynb  unet.ipynb
src/liver_tk/: __init__.py  train.py
src/liver_tk/dataloader/: dataloader.py
src/liver_tk/datamodule/: segmentation_datamodule.py  segmentation_dataset.py
src/liver_tk/nets/: unet.py  unetr.py  vision_transformer.py
src/liver_tk/processing/: cli.py  process_image.py  process_image_dataset.py
src/liver_tk/transforms/: __init__.py  transforms.py
